--- a/backend/config/email.yml
+++ b/backend/config/email.yml
@@ -1,14 +1,14 @@
-development:
-  :address: smtp.gmail.com
-  :port: 587
-  :authentication: plain
-  :user_name: mrmscvfunrun
-  :password: goraiders
-  :enable_starttls_auto: true
-production:
-  :address: smtp.gmail.com
-  :port: 587
-  :authentication: plain
-  :user_name: xxx
-  :password: yyy
-  :enable_starttls_auto: true
+# development:
+#   :address: smtp.gmail.com
+#   :port: 587
+#   :authentication: plain
+#   :user_name: ENV["username"]
+#   :password: ENV["password"]
+#   :enable_starttls_auto: true
+# production:
+#   :address: smtp.gmail.com
+#   :port: 587
+#   :authentication: plain
+#   :user_name: ENV["username"]
+#   :password: ENV["password"]
+#   :enable_starttls_auto: true
